--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-app-loading": "^2.1.1",
     "expo-cli": "^6.3.12",
     "expo-font": "~13.0.1",
+    "expo-local-authentication": "^15.0.1",
     "expo-status-bar": "~2.0.0",
     "express": "^4.21.1",
     "film": "file:",
@@ -34,12 +35,14 @@
     "react": "18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-local-authentication": "^0.1.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.8.2",
     "twilio": "^5.3.5"
   },
   "devDependencies": {
